manifests/services/db-server-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-server-svc
  namespace: db-ns
spec:
  type: ClusterIP
  selector:
    app: db-server
  ports:
  - port: 3306
    targetPort: 3306
