manifests/services/phpmyadmin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-svc
  namespace: db-ns
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
