manifests/services/web-admin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-admin-svc
spec:
  type: ClusterIP
  selector:
    app: web-admin-deployment
  ports:
  - port: 80
    targetPort: 80
