manifests/services/web-customer-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-customer-svc
spec:
  type: ClusterIP
  selector:
    app: web-customer-deployment
  ports:
  - port: 80
    targetPort: 80
