manifests/services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: dev-ingress
spec:
  rules:
  - host: cluster
    http:
      paths:
      - pathType: Prefix
        path: "/phpmyadmin"
        backend:
          service:
            name: phpmyadmin-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/customer"
        backend:
          service:
            name: web-customer-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: admin-svc
            port: 
              number: 80
